--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
 # Exclude from zip/tarball downloads (Asset Library)
-screenshots/ export-ignore
+# Users only need the addons/ folder, LICENSE, and README
+.gitattributes export-ignore
+.gitignore export-ignore
+.godot/ export-ignore
+icon.png export-ignore
 icon.svg export-ignore
+icon.svg.import export-ignore
+project.godot export-ignore
+screenshots/ export-ignore
