feat: Add unused variable detection, respect .gdignore, and settings UI improvements
- Add unused variable and unused parameter detection with configurable options
- Add respect_gdignore option to skip directories with .gdignore files (enabled by default)
- Add qube:ignore comments to intentionally complex functions in the analyzer
- Refactor settings panel with card-based UI and About section
- Copy LICENSE and README to plugin folder for proper AssetLib distribution
- Fix path normalization bug that broke res:// path scanning on Windows
- Update GitHub links to graydwarf

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Exclude from zip/tarball downloads (Asset Library)
-# Users only need the addons/ folder, LICENSE, and README
+# Users only need the addons/ folder (which contains LICENSE and README)
 .gitattributes export-ignore
 .gitignore export-ignore
 .godot/ export-ignore
@@ -8,3 +8,5 @@ icon.svg export-ignore
 icon.svg.import export-ignore
 project.godot export-ignore
 screenshots/ export-ignore
+LICENSE export-ignore
+README.md export-ignore
