feat: Add HTML report generator and project config support
- Add html-report-generator.gd for generating styled HTML reports
- Add .gdqube.cfg project config file for shared quality thresholds
- Update .gitignore to exclude generated reports and local state
- Minor updates to analyze-cli.gd and dock.gd

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ mono_crash.*.json
 
 # Analysis output
 code_quality_report.json
+code_quality_report.html
+
+# Local state
+.gdqube_state.json
+
+# Claude Code (user-specific)
+.claude/
