refactor: Replace qube: prefix with gdlint: for ignore directives
- Rename ignore directive prefix from qube:ignore to gdlint:ignore
- Rename all Qube* class names to GDLint* (13 classes)
- Rename config file from .gdqube.cfg to .gdlint.cfg
- Update CLI header from "GODOT QUBE" to "GDSCRIPT LINTER"
- Update all documentation (README, IGNORE_RULES.md, CLAUDE.md)

This aligns with gdtoolkit/gdlint conventions that GDScript developers
are familiar with.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ code_quality_report.json
 code_quality_report.html
 
 # Local state
-.gdqube_state.json
+.gdlint_state.json
 
 # Claude Code (user-specific)
 .claude/
